# Pyra

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  example.pyx  gitcmd.txt  gramar.txt  helloworld.cpp  main  main.cpp  pyra  run.txt  test.pyx  todo.txt  vcpkg-configuration.json  vcpkg.json  vmdom.cpp
examples/devtest/: helios.config  index.ink
examples/devtest/web/src/pages/: page1.cpp
examples/myapp/: index.pyx
examples/myapp/web/: index.html  server.py
examples/newapp/: index.ink  index.pyx
examples/newapp/web/: generated.cpp  main.js  main.wasm  sockcl.js  vdom.hpp
examples/testapp/: index.ink  main
examples/testapp/android/: MainActivity.java
examples/testapp/web/: generated.cpp  index.html  main.js  vdom.hpp
headers/: astvisualise.hpp  lexer.hpp  parser.hpp  semantics.hpp  test.hpp  web.hpp  web_engine.hpp
include/: astvisualise.hpp  lexer.hpp  parser.hpp  semantics.hpp  web_engine.hpp
include/core/: core.hpp
include/devx/: heliosfilewatcher.hpp  httpserver.hpp  websocketserver.hpp
include/web/: web_engine.hpp
myapp/: index.pyx  pyra.config
myapp/web/: generated.cpp  index.html  main.js  main.wasm  vdom.hpp
newapp/: index.pyx  main  pyra.config
newapp/web/: app.css  generated.cpp  index.html  main.js  main.wasm  server.py  vdom.hpp
src/: CMakeLists.txt  devserver.cpp  lexer.cpp  parser.cpp  semantics.cpp
src/core/: core.cpp
src/devx/: server.cpp  websocket.cpp
src/webengine/: webengine.cpp
test/: CMakeLists.txt  colorterm.py  hello.cpp  index.pyx  pyra.config  server.cpp  test  test.hpp  todo.txt  webpage.pyx  websocket.cpp
test/web/: CMakeLists.txt  generated.cpp  main.js  main.wasm  server.py  test  vdom.hpp
test/web/include/: vdom.hpp
test/web/src/: generated.cpp  vdom.cpp
testapp/: index.pyx  pyra.config
testapp/web/: generated.cpp  main.js  main.wasm
web/: generated.cpp  index.html  package-lock.json  test.hpp  utils.hpp  vddomoriginal.hpp  vdom.hpp
